--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-faker==37.4.0
-confluent-kafka==2.11.0
-boto3==1.39.3
+faker
+confluent-kafka
+boto3
 apache-airflow==2.10.3
-elasticsearch==9.0.2
+elasticsearch
