--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-faker
-confluent-kafka
-boto3
+faker>=30.0.0,<=35.0.0
+confluent-kafka>=2.1.0,<2.9.0
 apache-airflow==2.10.3
-elasticsearch
+elasticsearch>=7.0.0,<=8.17.1
